# wisdom-agentdb

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
apps/cli/: README.md  package.json
apps/cli/src/: wisdom.ts
architecture/: README.md  api-contract.md  architecture-proposal.md  borrow-vs-build.md  deployment.md  erd.md  event-schema.json  event-schema.md  memory-engine-flow.mmd  openapi.yaml  prd.md  sdd.md  stack-overview.md  ui-spec.md  user-flow.md
docs/: README.md  architecture-overview.md  benchmark-notes.md  decision-log.md
src/wisdom_agentdb/: __init__.py  app.py  main.py  models.py  store.py  worker.py
tests/: test_health.py  test_memory_flow.py
