[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wisdom-agentdb"
version = "0.1.0"
description = "A memory database for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "geanderson-ai" }]
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.8",
  "uvicorn[standard]>=0.30",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

