[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wisdom-agentdb"
version = "0.1.0"
description = "A memory database for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "geanderson-ai" }]
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.8",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
wisdom-agentdb = "wisdom_agentdb.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

